--- a/src/main/webapp/resources/css/layouts/marketing.css
+++ b/src/main/webapp/resources/css/layouts/marketing.css
@@ -72,7 +72,7 @@ label {
  */
 .pure-button {
     background-color: #E6E6E6;
-    color: #265778;
+    color: #646464;
     padding: 0.5em 2em;
     border-radius: 5px;
 }
@@ -133,7 +133,7 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background: #1f8dd6;
+    background: #DEDEDE;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
