Atualizacao de CSS e Classes

--- a/src/main/webapp/resources/css/layouts/marketing.css
+++ b/src/main/webapp/resources/css/layouts/marketing.css
@@ -12,6 +12,7 @@ body {
     line-height: 1.7em;
     color: #7f8c8d;
     font-size: 13px;
+    background: #dedede;
 }
 
 h1,
@@ -133,7 +134,7 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background: #DEDEDE;
+    background: #f0f0f0;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
